CowDetails - Added treatments and conditions creations and display
