# CM.Portal/src/app/api/models/treatment-dto.ts
@@ -1,9 +1,10 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface TreatmentDto {
-  comment?: null | string;
   conditionId?: null | number;
   cowId?: number;
   date?: string;
+  id?: number;
   name?: null | string;
+  type?: null | string;
 }
